--- a/templates/survey_start.html
+++ b/templates/survey_start.html
@@ -1,17 +1,14 @@
-{% extends 'base.html' %}
-{% block content %}
+{% extends 'base.html' %} {% block content %}
 
-  <h1> Survey Title Should Go Here</h1>
-  <p>
-    Survey Instructions Should Go Here
-  </p>
+<h1>{{ title }}</h1>
+<p>{{ instructions }}</p>
 
-  <!--
+<!--
     DO NOT CHANGE THE FORM ACTION OR METHOD
     You'll need to write the applicable code to handle this request
    -->
-  <form action="/begin" method="POST">
-    <button>Start!</button>
-  </form>
+<form action="/begin" method="POST">
+  <button>Start!</button>
+</form>
 
 {% endblock %}
