--- a/templates/completion.html
+++ b/templates/completion.html
@@ -1,7 +1,12 @@
-{% extends 'base.html' %}
+{% extends 'base.html' %} {% block content %}
 
-{% block content %}
+<h1>Thanks for completing this survey!</h1>
 
-  <h1>Thanks for completing this survey!</h1>
-
+<ul>
+  {% for num in range(0, length) %}
+  <li><b>{{ prompts[num] }}</b> {{ responses[num] }}</li>
+  {% endfor %}
+</ul>
 {% endblock %}
+
+<!-- {{ questions[num].prompt }} -->
